--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="我叫黃芊瑜，來自桃園壽山" />
+        <meta name="description" content="我叫黃芊瑜，來自桃園" />
         <meta name="author" content="黃芊瑜" />
         <title>黃芊瑜的自我介紹</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        黃芊瑜
+                        <span class="text-primary">Qian-Yu Huang</span>
                     </h1>
                     <div class="subheading mb-5">
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
