修改自我介紹

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                         <span class="text-primary">Qian-Yu Huang</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        台北市木柵路一段十七巷一號 No.17, Sec.1, Rd.Mu-Cha, Taipei City, Taiwan <br/>
+                        (TEL)+886-2-22368225 ext. 83283 <br/>
+                        <a href="mailto:name@email.com">a111070013@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">哈囉!大家好~我是黃芊瑜，世新大學大一生，來自桃園，喜歡吃甜食、聽音樂，也喜歡交朋友，歡迎來認識我!</p>
+                    <p class="lead mb-5">Hello! I am  Qian-yu Huang, a freshman from Shih Hsin University, from Taoyuan. I like to eat sweets, listen to music, and also like to make friends. Welcome to meet me!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
