--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">高中吉他社幹部</h3>
+                            <div class="subheading mb-3">美宣/文書</div>
+                            <p>幫助吉他社內部運作，表演事宜。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
@@ -106,8 +106,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學 Shih Hsin University</h3>
                             <div class="subheading mb-3">資訊傳播學系 Department of Information and Communication</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <div></div>
+                            <p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2022 - June 2025</span></div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">壽山高中 Shou Shan High School</h3>
                             <div class="subheading mb-3">語文專長實驗班 </div>
-                            <p>GPA: 3.56</p>
+                            <p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - June 2022</span></div>
                     </div>
