--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Qian-Yu Huang</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         台北市木柵路一段十七巷一號 No.17, Sec.1, Rd.Mu-Cha, Taipei City, Taiwan <br/>
-                        (TEL)+886-2-22368225 ext. 83283 <br/>
+                        (TEL)+886900672139 <br/>
                         <a href="mailto:name@email.com">a111070013@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">哈囉!大家好~我是黃芊瑜，世新大學大一生，來自桃園，喜歡吃甜食、聽音樂，也喜歡交朋友，歡迎來認識我!</p>
@@ -69,15 +69,15 @@
                             <div class="subheading mb-3">美宣/文書</div>
                             <p>幫助吉他社內部運作，表演事宜。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2020 - June 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">高中班級幹部</h3>
+                            <div class="subheading mb-3">副班長/學藝</div>
+                            <p>協助班級事務</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - June 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
