--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         黃芊瑜
                         <span class="text-primary">Qian-Yu Huang</span>
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="text-transform: none;subheading mb-5">
                         台北市木柵路一段十七巷一號 No.17, Sec.1, Rd.Mu-Cha, Taipei City, Taiwan <br/>
                         (TEL)+886900672139 <br/>
                         <a href="mailto:name@email.com">a111070013@mail.shu.edu.tw</a>
