--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
                     <p class="lead mb-5">哈囉!大家好~我是黃芊瑜，世新大學大一生，來自桃園，喜歡吃甜食、聽音樂，也喜歡交朋友，歡迎來認識我!</p>
                     <p class="lead mb-5">Hello! I am  Qian-yu Huang, a freshman from Shih Hsin University, from Taoyuan. I like to eat sweets, listen to music, and also like to make friends. Welcome to meet me!</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://reurl.cc/Ad6MXe"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-icon" href="https://line.me/ti/p/rKGxMrnW7M"><i class="fa-brands fa-line"></i></a>
+                        <a class="social-icon" href="https://reurl.cc/V80Y0Z"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -107,6 +106,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學 Shih Hsin University</h3>
+                                <a class="expedu-icon" href="http://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
                             <div class="subheading mb-3">資訊傳播學系 Department of Information and Communication</div>
                             <div></div>
                             <p></p>
@@ -116,6 +116,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">壽山高中 Shou Shan High School</h3>
+                                <a class="expedu-icon" href="http://www.sssh.tyc.edu.tw/bin/home.php"><i class="fa-solid fa-school-flag"></i></a>
                             <div class="subheading mb-3">語文專長實驗班 </div>
                             <p></p>
                         </div>
