--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Qian-Yu Huang</span>
+                <span class="d-block d-lg-none">芊瑜</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -44,12 +44,12 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         黃芊瑜
-                        <span class="text-primary">Qian-Yu Huang</span>
+                        <p class="text-primary">Qian-Yu Huang</span>
                     </h1>
                     <div class="text-transform: none;subheading mb-5">
                         台北市木柵路一段十七巷一號 No.17, Sec.1, Rd.Mu-Cha, Taipei City, Taiwan <br/>
                         (TEL)+886900672139 <br/>
-                        <a href="mailto:name@email.com">a111070013@mail.shu.edu.tw</a>
+                        <a href ="mailto:name@email.com" id="pink">a111070013@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">哈囉!大家好~我是黃芊瑜，世新大學大一生，來自桃園，喜歡吃甜食、聽音樂，也喜歡交朋友，歡迎來認識我!</p>
                     <p class="lead mb-5">Hello! I am  Qian-yu Huang, a freshman from Shih Hsin University, from Taoyuan. I like to eat sweets, listen to music, and also like to make friends. Welcome to meet me!</p>
@@ -105,8 +105,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學 Shih Hsin University</h3>
-                                <a class="expedu-icon" href="http://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                            <h3 class="mb-0">世新大學 Shih Hsin University <a class="expedu-icon" href="http://ics.wp.shu.edu.tw/"><i class="fa-solid fa-graduation-cap"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系 Department of Information and Communication</div>
                             <div></div>
                             <p></p>
@@ -115,8 +114,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">壽山高中 Shou Shan High School</h3>
-                                <a class="expedu-icon" href="http://www.sssh.tyc.edu.tw/bin/home.php"><i class="fa-solid fa-school-flag"></i></a>
+                            <h3 class="mb-0">壽山高中 Shou Shan High School <a class="expedu-icon" href="http://www.sssh.tyc.edu.tw/bin/home.php"><i class="fa-solid fa-school-flag"></i></a></h3>
+                                
                             <div class="subheading mb-3">語文專長實驗班 </div>
                             <p></p>
                         </div>
@@ -131,36 +130,23 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-github"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-file-word"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Website design
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Organize the data
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Organize the report
                         </li>
                     </ul>
                 </div>
@@ -170,55 +156,38 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>我的興趣是聽音樂、吃甜點、拍照、去各個地方旅行</p>
+                    <p class="mb-0">My hobbies are listening to music, eating desserts, taking photograph, and traveling to various places</p>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-ice-cream"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-camera"></i></li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!--Portfolios-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
+                    <h2 class="mb-5">Portfolios</h2>
+                    <table id="abc">
+                        <tr>
+                           <th>高中時期</th>
+                           <th>日期</th>
+                        </tr>
+                        <tr>
+                           <td><a class="social-icon bling" href="https://reurl.cc/Ad6MXe">橘風吉他社</a></td>
+                           <td>A2</td>
+                        </tr>
+                        <tr>
+                            <td><a class="social-icon bling" href="https://reurl.cc/Ad6MXe">吉他社</a></td>
+                            <td>A2</td>
+                         </tr>
+                         <tr>
+                            <th>大學時期</th>
+                            <th>T2</th>
+                         </tr>
+                    </table>
                 </div>
             </section>
         </div>
