--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Website design
+                            設計網頁 Website design
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Organize the data
+                            整理資料 Organize the data
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Organize the report
+                            統整報告 Organize the report
                         </li>
                     </ul>
                 </div>
@@ -156,7 +156,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>我的興趣是聽音樂、吃甜點、拍照、去各個地方旅行</p>
+                    <p>我的興趣是聽音樂、吃甜點、去各個地方旅行，平時喜歡隨手拍照、錄影紀錄生活</p>
                     <p class="mb-0">My hobbies are listening to music, eating desserts, taking photograph, and traveling to various places</p>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
@@ -176,16 +176,24 @@
                            <th>日期</th>
                         </tr>
                         <tr>
-                           <td><a class="social-icon bling" href="https://reurl.cc/Ad6MXe">橘風吉他社</a></td>
-                           <td>A2</td>
-                        </tr>
+                            <td><a class="social-icon bling" href="https://reurl.cc/Q4lpAo">小論文</a></td>
+                            <td>2020</td>
+                         </tr>
                         <tr>
-                            <td><a class="social-icon bling" href="https://reurl.cc/Ad6MXe">吉他社</a></td>
-                            <td>A2</td>
+                           <td><a class="social-icon bling" href="https://reurl.cc/9VAzY8">橘風吉他社</a></td>
+                           <td>2020-2021</td>
+                        </tr>
+                         <tr>
+                            <td><a class="social-icon bling" href="https://reurl.cc/pLbDk4">打工換宿</a></td>
+                            <td>2022</td>
                          </tr>
                          <tr>
                             <th>大學時期</th>
-                            <th>T2</th>
+                            <th>  </th>
+                         </tr>
+                         <tr>
+                            <td><a class="social-icon bling" href="https://reurl.cc/vkbnRa">展昭企劃比賽入圍</a></td>
+                            <td>2023</td>
                          </tr>
                     </table>
                 </div>
