--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="我叫黃芊瑜，來自桃園" />
+        <meta name="description" content="歡迎來到黃芊瑜的自我介紹" />
         <meta name="author" content="黃芊瑜" />
         <title>黃芊瑜的自我介紹</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -51,8 +51,8 @@
                         (TEL)+886900672139 <br/>
                         <a href ="mailto:name@email.com" id="pink">a111070013@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">哈囉!大家好~我是黃芊瑜，世新大學大一生，來自桃園，喜歡吃甜食、聽音樂，也喜歡交朋友，歡迎來認識我!</p>
-                    <p class="lead mb-5">Hello! I am  Qian-yu Huang, a freshman from Shih Hsin University, from Taoyuan. I like to eat sweets, listen to music, and also like to make friends. Welcome to meet me!</p>
+                    <p class="lead mb-5">睡覺!超級愛睡覺!找不到我的時候大部分都是睡著ㄌ</p>
+                    <p class="lead mb-5">Sleep is the best thing in the world!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://reurl.cc/Ad6MXe"><i class="fa-brands fa-instagram"></i></a>
                         <a class="social-icon" href="https://line.me/ti/p/rKGxMrnW7M"><i class="fa-brands fa-line"></i></a>
