--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
+                    <div class="mb-2">
+                        <p>作品的<a href="portfolios.html">詳細介紹</a></p>
+                        <p><a href="http://betty0402.github.io/proman/index.html"></a></p>
+                    </div>
                     <table id="abc">
                         <tr>
                            <th>高中時期</th>
