--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
                     <div class="mb-2">
-                        <p>作品的<a href="portfolios.html">詳細介紹</a></p>
-                        <p><a href="http://betty0402.github.io/proman/index.html"></a></p>
+                        <p>作品的<a href="index 1.html">詳細介紹</a></p>
+                        <p><a href="http://betty0402.github.io/proman/index 1.html"></a></p>
                     </div>
                     <table id="abc">
                         <tr>
