--- a/index 1.html
+++ b/index 1.html
@@ -244,7 +244,7 @@
         <h3 class="featurette-heading fw-normal lh-1">生活不開心的時候，至少我們還有音樂。</h3>
         <h3 class="featurette-heading fw-normal lh-1">Music is important in life.</h3>
         <span class="text-body-secondary"></span>
-        <p class="lead">小時候對音樂就很有興趣，所以一直吵著要學鋼琴，也因為這樣音樂就變人生中不可或缺的了。高中時加入了橘風吉他社，學到了好多種樂器，也對樂團越來越喜歡，能在最青春的時候跟著一群瘋狂的人，玩樂團、到處表演、聽團，真的好幸運也好開心。</p>
+        <p class="lead">小時候對音樂就很有興趣，所以一直吵著要學鋼琴，也因為這樣音樂就變人生中不可或缺的了。高中時加入了橘風吉他社，學會了吉他、爵士鼓、木箱鼓，才發現原來跟著一群有同樣興趣的人一起玩音樂可以這麼的快樂，在一起組團下對樂團越來越喜歡。能在最青春的時候跟著一群瘋狂的人，玩樂團、到處表演、聽團，真的好幸運也好開心!</p>
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="d-none d-lg-block"><img class="img-fluid img-profile rounded-sqare mx-auto mb-2" src="assets/img/6.jpg" alt="..." /></svg>
