--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>我的興趣是聽音樂、吃甜點、去各個地方旅行，平時喜歡隨手拍照、錄影紀錄生活</p>
                     <p class="mb-0">My hobbies are listening to music, eating desserts, taking photograph, and traveling to various places</p>
+                    <div class="mb-2">
+                        <p><a class="social-icon bling" href="index 1.html">點這裡更了解我</a></p>
+                        <p><a href="http://betty0402.github.io/proman/index 1.html"></a></p>
+                    </div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-ice-cream"></i></li>
